style.css
:root {
  font-size: 16px;
  --primary-color: #e65423;
  --secondary-color: #ffccbb;
  --offset-dark: #3a3a3c;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Abel", sans-serif;
  color: var(--offset-dark);
  scroll-behavior: smooth;
}

/* SECTIONS (GENERAL) */
section {
  padding: 30px;
}
.btn {
  font-size: 20px;
  font-weight: bold;
  color: var(--offset-dark);
  background: transparent;
  border: 2px solid var(--offset-dark);
  display: inline-block;
  padding: 10px 30px;
  margin-top: 20px;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 2px;
  transition: 0.5s;
}
.btn:hover {
  letter-spacing: 6px;
  background: #e65423;
  color: var(--secondary-color);
  border: 2px solid var(--primary-color);
}
.title-text {
  font-size: 7rem;
  /* font-weight: 300; */
  font-family: "Pathway Gothic One", sans-serif;
  text-transform: uppercase;
  letter-spacing: -3px;
  color: var(--primary-color);
}
p {
  font-weight: 300;
  color: var(--offset-dark);
}
.row {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: space-around;
}
.row .content {
  max-width: 1100px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.row .title-column-left {
  width: 600px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}
.row .title-column-right {
  width: 600px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}
.row .title-column-right .title-text {
  color: var(--secondary-color);
}

/* HEADER NAVIGATION */
header {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100px;
  padding: 20px 50px;
  z-index: 100;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 0.5s;
  background-color: rgba(255, 255, 255, 0);
}
header .navigation {
  /* position: relative; */
  display: flex;
}
header .navigation li {
  list-style: none;
  margin-left: 85px;
}
header .navigation li a {
  text-decoration: none;
  color: var(--offset-dark);
  font-size: 26px;
}
header .navigation li a:hover {
  color: var(--primary-color);
}
header .menu-bars {
  display: none;
}

/* BANNER SECTION */
section#slideshow {
  padding: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  position: relative;
  overflow: hidden;
}
.slideshow .btn {
  position: absolute;
  justify-content: center;
  align-items: center;
  left: 50%;
  transform: translateX(-50%);
  bottom: 40%;
  z-index: 10;
}
.slideshow-item {
  width: inherit;
  height: inherit;
  position: absolute;
  opacity: 0;
  animation: cycleImages 26s infinite;
}
.slideshow-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  /* animation: zoom 21s infinite; */
}
.slideshow-item:nth-child(1),
.slideshow-item:nth-child(1) img {
  animation-delay: 0s;
}
.slideshow-item:nth-child(2),
.slideshow-item:nth-child(2) img {
  animation-delay: 5s;
}
.slideshow-item:nth-child(3),
.slideshow-item:nth-child(3) img {
  animation-delay: 10s;
}
.slideshow-item:nth-child(4),
.slideshow-item:nth-child(4) img {
  animation-delay: 15s;
}
.slideshow-item:nth-child(5),
.slideshow-item:nth-child(5) img {
  animation-delay: 20s;
}

/* MY WORK SECTION */
section#mywork {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
.mywork .content {
  margin: 30px;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.mywork .content .card {
  position: relative;
  margin: 25px;
  width: 400px;
  /* background: chartreuse; */
  /* box-shadow: 0 5px 35px rgba(0, 0, 0, 0.04); */
  cursor: pointer;
}
.mywork .content .card .imgBox {
  /* border: 1px solid brown; */
  width: 250px;
  overflow: hidden;
}
.mywork .content .card .imgBox img {
  width: 100%;
  object-position: center;
  object-fit: cover;
  transform: translateX(-10%);
}
.mywork .content .text {
  position: absolute;
  top: 50%;
  left: 200px;
  transform: translateY(-50%);
}
.mywork .content .text h3 {
  font-family: "Montserrat", sans-serif;
  font-size: 30px;
  color: var(--primary-color);
}
.mywork .content .text h3 a {
  text-decoration: none;
}

/* ABOUT SECTION */
section#about {
  width: 100%;
  background: var(--primary-color);
  display: flex;
}
.about .content {
  margin: 30px;
  /* width: auto; */
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.about .content .contentRow {
  display: flex;
  width: auto;
}
.about .content .contentRow .imgBox {
  margin: 10px;
  object-fit: contain;
  width: auto;
}
.about .content .contentRow .text {
  width: auto;
  margin: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}
.about .content .contentRow .text p {
  margin: 16px 0;
  font-size: 1.2rem;
}
.about .content p {
  color: var(--secondary-color);
}
.about .content img {
  width: auto;
  object-fit: contain;
}

/* CONTACT SECTION */
section#contact {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
.contact .content {
  position: relative;
  margin: 30px;
  width: 100%;
  font-size: 24px;
}
.contact .content .text p {
  margin: 40px 0px;
  /* margin-left: 180px; */
}
.contact .content .text span {
  color: var(--primary-color);
}
.contact .content .text a {
  text-decoration: none;
}
.fa-envelope {
  color: var(--primary-color);
  margin-right: 10px;
}
.fa-phone {
  color: var(--primary-color);
  margin-right: 10px;
}
.fa-linkedin-in {
  color: var(--primary-color);
  margin-right: 10px;
}

/* FOOTER SECTION */
footer {
  position: relative;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 120px;
  padding: 20px 50px;
  z-index: 100;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 0.5s;
  background-color: var(--primary-color);
  font-size: 16px;
}
footer img {
  width: 200px;
}
footer .index {
  position: absolute;
  display: flex;
  align-items: center;
  left: 50%;
  transform: translateX(-50%);
}
footer .index li {
  list-style: none;
  margin: 50px;
  text-align: center;
}
footer .index li a {
  text-decoration: none;
  color: var(--secondary-color);
  font-weight: 300;
  font-size: 24px;
}
footer .index li a:hover {
  color: var(--offset-dark);
}
footer p {
  text-align: right;
}
footer span {
  color: #e6e6e6;
}

/* SLIDESHOW ANIMATION */
@keyframes cycleImages {
  20% {
    opacity: 1;
  }
  40% {
    opacity: 0;
  }
}

@media screen and (max-width: 1450px) {
  /* HEADER NAVIGATION (<1450px) */
  header {
    height: 80px;
    padding: 15px 30px;
  }
  header .navigation li {
    margin-left: 85px;
  }
  header .navigation li a {
    font-size: 24px;
  }
  .row .content {
    width: 100vw;
    overflow: hidden;
    margin: 20px;
  }
  .row .content .contentRow {
    justify-content: space-around;
  }

  /* MY WORK SECTION (<1450px) */
  .mywork .row {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .mywork .row .title-column-left {
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  /* ABOUT SECTION (<1450px) */
  .about .row {
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
  }
  .about .row .title-column-right {
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .about .content .contentRow .text {
    margin: 10px;
  }

  /* CONTACT SECTION (<1450px) */
  .contact .row {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .contact .row .title-column-left {
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  /* FOOTER SECTION (<1450px) */
  footer {
    padding: 15px 30px;
    height: 100px;
  }
  footer img {
    width: 180px;
  }
  footer .index li {
    display: none;
  }
  footer .index li a {
    font-size: 20px;
  }
  footer p {
    text-align: right;
    font-size: 14px;
  }
}

@media screen and (max-width: 1000px) {
  /* HEADER NAVIGATION (<999px) */
  .slideshow .btn {
    font-size: 18px;
    padding: 8px 22px;
  }
  header {
    height: 80px;
    padding: 15px 30px;
  }
  header .navigation {
    display: none;
  }
  header .navigation.active {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background: #fff;
  }
  header .navigation li {
    margin: 24px 0px;
  }
  header .navigation li a {
    color: #111;
    font-size: 1.6em;
  }
  .menuToggle {
    position: relative;
    width: 40px;
    height: 40px;
    background: url(./images/menu.png);
    background-size: 30px;
    background-repeat: no-repeat;
    background-position: center;
    cursor: pointer;
    filter: invert(1);
    z-index: 10;
  }
  .menuToggle.active {
    background: url(./images/close.png);
    background-size: 25px;
    background-repeat: no-repeat;
    background-position: center;
  }
  .title-text {
    font-size: 5rem;
  }
  .row .content {
    width: 100vw;
    overflow: hidden;
  }

  /* MY WORK SECTION (<999px) */
  .mywork .content .card {
    width: 320px;
  }
  .mywork .content .card .imgBox {
    width: 200px;
  }
  .mywork .content .text h3 {
    font-size: 24px;
  }

  /* ABOUT SECTION (<999px) */
  .about .content {
    margin: 0;
  }
  .about .content .contentRow {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .about .content .contentRow .text {
    padding: 0 20px;
    width: 100vw;
    text-align: center;
  }
  .about .content .contentRow .text img {
    align-self: center;
  }

  /* CONTACT SECTION (<1450px) */
  .contact .row {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .contact .row .content {
    font-size: 20px;
  }

  /* FOOTER SECTION (<999px) */
  footer {
    padding: 15px 30px;
    height: 120px;
    flex-direction: column;
    justify-content: space-around;
  }
  footer img {
    width: 140px;
  }
  footer .index li {
    display: none;
  }
  footer p {
    text-align: center;
    font-size: 12px;
  }
}

